force-app/main/default/objects/Account_Expense_Detail__c/Account_Expense_Detail__c.object-meta.xml
<CustomObject>
    <label>Account Expense Detail</label>
    <nameField>
        <label>Account Expense Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Expense Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>