force-app/main/default/objects/Account_Expense_Detail__c/fields/Account_Budget_Detail__c.field-meta.xml
<CustomField>
    <fullName>Account_Budget_Detail__c</fullName>
    <label>Account Budget</label>
    <referenceTo>Account_Budget_Detail__c</referenceTo>
    <relationshipLabel>Account Expense Details</relationshipLabel>
    <relationshipName>Account_Expense_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>