force-app/main/default/objects/Account_Expense_Detail__c/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Conf_Category__c.Category_Type__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Conf_Category__c</referenceTo>
    <relationshipLabel>Account Expense Details</relationshipLabel>
    <relationshipName>Account_Expense_Details</relationshipName>
    <type>Lookup</type>
</CustomField>