force-app/main/default/objects/Account_Expense_Detail__c/fields/Budget_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Sub Category</label>
    <referenceTo>Configuration_Category_Detail__c</referenceTo>
    <relationshipLabel>Account Expense Details</relationshipLabel>
    <relationshipName>Account_Expense_Details</relationshipName>
    <type>Lookup</type>
</CustomField>