force-app/main/default/objects/Account_Expense_Detail__c/fields/Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year__c</fullName>
    <label>Budget Year</label>
    <length>254</length>
    <type>Text</type>
</CustomField>